Added width =100% to film video to make sure its aligned properly and responsive to the size of the viewport.

--- a/index.html
+++ b/index.html
@@ -92,11 +92,11 @@
         <div class = "container ">
             
             <h1> Film </h1>
-            <iframe width="800" height="600" 
+            <iframe width="100%" height="600vh" 
             src="https://www.youtube.com/embed/WibcmWB-hkk?si=vjhUF2hiLvCWiHpQ" 
             title="YouTube video player" frameborder="0" 
             allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" 
-            referrerpolicy="strict-origin-when-cross-origin" allowfullscreen>
+            referrerpolicy="strict-origin-when-cross-origin" style ="align-items: center;" allowfullscreen >
             </iframe>  
         </div>   
         
